--- a/Art/Squares/manifest.json
+++ b/Art/Squares/manifest.json
@@ -28,8 +28,8 @@
     }
   ],
   "id": "elefantinodesign-square-art",
-  "start_url": "./",
-  "scope":"./",
+  "start_url": ".",
+  "scope":"/Art/Squares/",
   "background_color": "#000000",
   "display": "fullscreen",
   "theme_color": "#000000",
