--- a/Art/Squares/manifest.json
+++ b/Art/Squares/manifest.json
@@ -28,7 +28,7 @@
     }
   ],
   "id": "elefantinodesign-square-art",
-  "start_url": ".",
+  "start_url": "/Art/Squares/",
   "scope":"/Art/Squares/",
   "background_color": "#000000",
   "display": "fullscreen",
