--- a/Art/Squares/manifest.json
+++ b/Art/Squares/manifest.json
@@ -3,33 +3,33 @@
   "name": "Square Art",
   "icons": [
     {
-      "src": "/assets/logo512.png",
+      "src": "assets/logo512.png",
       "type": "image/png",
       "sizes": "512x512",
 			"purpose":"maskable any"
     },
 		{
-      "src": "/assets/logo192.png",
+      "src": "assets/logo192.png",
       "type": "image/png",
       "sizes": "192x192",
 			"purpose":"maskable any"
     },
 		{
-      "src": "/assets/logo64.png",
+      "src": "assets/logo64.png",
       "type": "image/png",
       "sizes": "64x64",
 			"purpose":"maskable any"
     },
 		{
-      "src": "/assets/logo16.png",
+      "src": "assets/logo16.png",
       "type": "image/png",
       "sizes": "16x16",
 			"purpose":"any"
     }
   ],
   "id": "elefantinodesign-square-art",
-  "start_url": "/Art/Squares/",
-  "scope":"/Art/Squares/",
+  "scope": "./",
+  "start_url": "./",
   "background_color": "#000000",
   "display": "fullscreen",
   "theme_color": "#000000",
